--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 
 <body>
   <div class="container">
-    <h1>Quick Quiz</h1>
-    <a href="/game.html" class="btn">Play</a>
-    <a href="/highscores.html" class="btn">highscores</a>
+    <div id="home" class="flex-center flex-column">
+      <h1>Quick Quiz</h1>
+      <a href="/game.html" class="btn">Play</a>
+      <a href="/highscores.html" class="btn">highscores</a>
+    </div>
   </div>
 </body>
 
