--- a/game.html
+++ b/game.html
@@ -12,6 +12,19 @@
 <body>
   <div class="container">
     <div id="game" class="justify-center flex-column">
+      <div id="hud">
+        <div class="hud-item">
+          <p id="progressText" class="hud-prefix">Question : 1/3 </>
+          <div id="progressBar">
+            <div id="progressBarFull"></div>
+          </div>
+        </div>
+
+        <div class="hud-item">
+          <h3 class="hud-prefix">Score</h3>
+          <h1 class="hud-maintext" id="score">10</h1>
+        </div>
+      </div>
       <h2 id="question"> What is the answer to this question </h2>
 
       <div class="choice-container">
