--- a/end.html
+++ b/end.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="app.css">
   <title>Congrats</title>
 </head>
@@ -16,8 +17,8 @@
         <input type="text" name="username" id="username" placeholder="username">
         <button type="submit" class="btn" id="saveScoreBtn" onclick="saveHighScore(event)" disabled>Save</button>
       </form>
-      <a href="/game.html" class="btn">Play</a>
-      <a href="./" class="btn">Home</a>
+      <a href="/game.html" class="btn">Play Again</a>
+      <a href="./" class="btn">Go Home</a>
     </div>
   </div>
   <script src="end.js"></script>
