--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <div class="container">
     <div id="home" class="flex-center flex-column">
       <h1>Quick Quiz</h1>
-      <a href="/game.html" class="btn">Play</a>
-      <a href="/highscores.html" class="btn">highscores</a>
+      <a href="game.html" class="btn">Play</a>
+      <a href="highscore.html" class="btn">highscores</a>
     </div>
   </div>
 </body>
