--- a/highscore.html
+++ b/highscore.html
@@ -15,7 +15,7 @@
       <h1 id="finalScore">high Scores</h1>
       <ul id="highScoresList">
       </ul>
-      <a href="/" class="btn" id="endBtn">Go Home</a>
+      <a href="index.html" class="btn" id="endBtn">Go Home</a>
     </div>
   </div>
   <script src="highscores.js"></script>
